# mine_robot

./: README.md
autopatrol_interfaces/: CMakeLists.txt  package.xml
autopatrol_robot/: package.xml  setup.py
autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
autopatrol_robot/config/: patrol_config.yaml
autopatrol_robot/launch/: autopatrol.launch.py
log/: latest_build
mine_aplication/: package.xml  setup.cfg  setup.py
mine_aplication/mine_aplication/: get_robot_pose.py  init_robot_pose.py  nav_to_pose.py
mine_nav2/: CMakeLists.txt  package.xml
mine_nav2/config/: nav2_params.yaml
mine_nav2/launch/: nav2.launch.py
mine_nav2/map/: room.pgm  room.yaml
mine_nav2/rviz/: nav2_config.rviz
mine_turtlebot3_gazebo/: CMakeLists.txt  package.xml
mine_turtlebot3_gazebo/launch/: empty_world.launch.py  multi_robot.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_autorace_2020.launch.py  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage2.launch.py  turtlebot3_dqn_stage3.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
